fix background z-index issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background: #000;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   overflow-x: hidden;
